# onionshare

./: .deepsource.toml  .gitignore  .travis.yml  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.txt  MANIFEST.in  README.md  RELEASE.md  SECURITY.md  a  build-source.sh  build_deb.sh  build_dmg.sh  build_exe.bat  build_rpm.sh  check_lacked_trans.py  index.html  itsdangerous  link_torbrowser  onionshare  onionshare-gui.py  onionshare-tails  onionshare.py  ppa_release.sh  presentation.md  pyproject.toml  setup-project.sh  setup.py  stdeb.cfg  strings.json  termuxcli  termuxcli.md  tor_exe  url추가  version  기능 분석 발표물.pptx  (+1 more)
cli/: CHANGELOG.md  LICENSE  Makefile  README.md  cli-requirements.txt  pyproject.toml  setup.py
cli/.circleci/: config.yml
cli/onionshare_cli/: __init__.py  censorship.py  common.py  meek.py  mode_settings.py  onion.py  onionshare.py  settings.py
cli/onionshare_cli/resources/: torrc_template  torrc_template-meek_lite_amazon  torrc_template-meek_lite_azure  torrc_template-obfs4  torrc_template-snowflake  torrc_template-webtunnel  version.txt
cli/onionshare_cli/resources/templates/: 401.html  403.html  404.html  405.html  500.html  chat.html  denied.html  listing.html  receive.html  send.html  textboard.html  textboard_thread.html  thankyou.html
cli/onionshare_cli/web/: __init__.py  chat_mode.py  receive_mode.py  send_base_mode.py  share_mode.py  textboard_mode.py  web.py  website_mode.py
cli/scripts/: get-tor-windows.py
cli/tests/: conftest.py  persistent.json  pytest.ini  test_cli.py  test_cli_common.py  test_cli_settings.py  test_cli_web.py  test_range_request.py
desktop/: BUILD.md  CHANGELOG.md  README.md  check_lacked_trans.py  desktop-requirements.txt  org.onionshare.OnionShare.appdata.xml  org.onionshare.OnionShare.desktop  pyproject.toml  setup-freeze.py  setup.py  stdeb.cfg
desktop/apparmor/abstractions/: onionshare
desktop/apparmor/local/: usr.bin.onionshare  usr.bin.onionshare-gui
desktop/dev_scripts/: onionshare  onionshare-gui
desktop/docs/: pyproject.toml
desktop/docs/gettext/: security.pot
desktop/docs/gettext/.doctrees/: advanced.doctree  environment.pickle  features.doctree  security.doctree
desktop/docs/source/: advanced.rst  conf.py  develop.rst  features.rst  help.rst  tor.rst
desktop/git-hooks/: pre-push
desktop/install/: build_exe.bat  build_rpm.sh  build_source.sh  macos_package.sh  onionshare.nsi  onionshare80.xpm  ppa_release.sh  pyinstaller.spec
desktop/install/macos_sandbox/: parent.plist
desktop/install/scripts/: onionshare  onionshare-gui  onionshare-pyinstaller
desktop/onionshare/: __init__.py  __main__.py  connection_tab.py  gui_common.py  main_window.py  moat_dialog.py  onion.py  settings_parent_tab.py  settings_tab.py  strings.py  tab_widget.py  threads.py  tor_connection.py  tor_settings_tab.py  update_checker.py  widgets.py
desktop/onionshare/resources/countries/: af.json  ar.json  be.json  bg.json  bn.json  ca.json  cs.json  da.json  de.json  el.json  en.json  es.json  fa.json  fi.json  fr.json  ga.json  hr.json  is.json  it.json  ja.json  km.json  lt.json  nb_NO.json  pl.json  pt_PT.json  ru.json  sk.json  sn.json  sq.json  sv.json  sw.json  ta.json  tr.json  uk.json  vi.json  zh_Hans.json  zh_Hant.json
desktop/onionshare/resources/locale/: af.json  am.json  ar.json  ay.json  be.json  bg.json  bn.json  bo.json  bs.json  ca.json  ckb.json  cs.json  da.json  de.json  el.json  en.json  enm.json  eo.json  es.json  fa.json  fi.json  fil.json  (+50 more)
desktop/onionshare/tab/: __init__.py  server_status.py  tab.py
desktop/onionshare/web/: __init__.py  chat_mode.py  website_mode.py
desktop/onionshare_gui/: __init__.py  gui_common.py  tor_connection_dialog.py
desktop/onionshare_gui/tab/: server_status.py  tab.py
desktop/package/: Entitlements.plist  build-mac.py  build-windows.py  license.rtf  macos.py  onionshare-cli.py  onionshare.py  windows.py
desktop/package/linux/: build-appimage.py  org.onionshare.OnionShare.appdata.xml
desktop/package/macos/: build.py
desktop/package/windows/: build.py
desktop/scripts/: build-macos.py  build-meek-client.py  build-pt-meek.ps1  build-pt-meek.sh  build-pt-obfs4proxy.ps1  build-pt-obfs4proxy.sh  build-pt-snowflake.ps1  build-pt-snowflake.sh  build-pt-webtunnel.sh  build-windows.py  check_lacked_trans.py  common.py  countries-get-flag.py  countries-get-images.py  countries-update-list.py  dev.bat  dev.sh  get-tor-linux.py  get-tor-osx.py  get-tor-windows.py  get-tor.py  macos-check-arch.py  macos-merge-universal.py  rebuild-cli.py  rebuild-cli.sh  tor-browser-devs.gpg  update-country-list.py
desktop/scripts/bridges/: __init__.py
desktop/share/locale/: af.json  da.json  de.json  fr.json  pl.json  pt_BR.json  ro.json  sw.json  uk.json  zh_Hant.json
desktop/share/templates/: chat.html  send.html  thankyou.html
desktop/src/: org.onionshare.OnionShare.appdata.xml  setup.py
desktop/src/onionshare/: __init__.py  __main__.py  auto_connect.py  connection_tab.py  gui_common.py  main_window.py  moat_dialog.py  settings_dialog.py  settings_tab.py  strings.py  tab_widget.py  threads.py  tor_connection.py  tor_connection_dialog.py  tor_settings_dialog.py  tor_settings_tab.py  update_checker.py  widgets.py
desktop/tests/: conftest.py  gui_base_test.py  run.bat  run.sh  test_cli.py  test_cli_settings.py  test_gui_chat.py  test_gui_receive.py  test_gui_share.py  test_gui_tabs.py  test_gui_website.py
docs/: README.md  build.sh  check-weblate.py  pyproject.toml  requirements.txt
docs/gettext/: advanced.pot  connecting.pot  develop.pot  features.pot  help.pot  index.pot  install.pot  security.pot  sphinx.pot  tor.pot
docs/gettext/.doctrees/: advanced.doctree  connecting.doctree  develop.doctree  environment.pickle  features.doctree  help.doctree  index.doctree  install.doctree  security.doctree  tor.doctree
docs/source/: advanced.rst  conf.py  connecting.rst  develop.rst  features.rst  help.rst  how_it_works.rst  index.rst  install.rst  security.rst  tor.rst
docs/source/_static/: custom.css
docs/source/_templates/: versions.html
(+1260 files in other folders)
