[tool.poetry]
name = "onionshare"
version = "2.3"
description = "OnionShare lets you securely and anonymously send and receive files. It works by starting a web server, making it accessible as a Tor onion service, and generating an unguessable web address so others can download files from you, or upload files to you. It does _not_ require setting up a separate server or using a third party file-sharing service."
authors = ["Micah Lee <micah@micahflee.com>"]
license = "GPLv3+"

[tool.poetry.dependencies]
python = "^3.7"
Click = "*"
Flask = "*"
Flask-HTTPAuth = "*"
flask-socketio = "*"
pycryptodome = "*"
PyQt5 = "5.14"
PyQt5-sip = "*"
PySocks = "*"
requests = "*"
stem = "*"
urllib3 = "*"
eventlet = "*"
qrcode = "*"
psutil = "*"
pywin32 = {version = "*", platform = "win32"}

[tool.poetry.dev-dependencies]
atomicwrites = "*"
attrs = "*"
more-itertools = "*"
pluggy = "*"
py = "*"
pytest = "*"
pytest-faulthandler = "*"
pytest-qt = "*"
six = "*"
urllib3 = "*"
setuptools = "*"
pyinstaller = {version = "*", platform = "darwin"}
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
