[tool.poetry]
name = "onionshare"
version = "2.6.1"
description = "OnionShare lets you securely and anonymously send and receive files. It works by starting a web server, making it accessible as a Tor onion service, and generating an unguessable web address so others can download files from you, or upload files to you. It does _not_ require setting up a separate server or using a third party file-sharing service."
authors = ["Micah Lee <micah@micahflee.com>"]
license = "GPLv3+"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
onionshare_cli = {path = "../cli", develop = true}
PySide6 = "6.5.2"
qrcode = "*"
werkzeug = "*"
python-gnupg = "*"

[tool.poetry.dev-dependencies]
click = "*"
black = "*"
pytest = "*"
pytest-faulthandler = "*"
pytest-qt = "*"
cx_freeze = "*"
importlib-metadata = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
onionshare = 'onionshare:main'
onionshare-cli = 'onionshare_cli:main'
