[tool.poetry]
name = "onionshare"
version = "2.6.2"
description = "OnionShare lets you securely and anonymously send and receive files. It works by starting a web server, making it accessible as a Tor onion service, and generating an unguessable web address so others can download files from you, or upload files to you. It does _not_ require setting up a separate server or using a third party file-sharing service."
authors = ["Micah Lee <micah@micahflee.com>"]
license = "GPLv3+"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
onionshare_cli = {path = "../cli", develop = true}
PySide6 = "6.8.2"
qrcode = "*"
werkzeug = "*"
python-gnupg = "*"
setuptools = "^74"

[tool.poetry.group.dev.dependencies]
click = "*"
black = "*"
pytest = "*"
pytest-faulthandler = "*"
pytest-qt = "*"
cx_freeze = "7.2.9"
importlib-metadata = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
onionshare = 'onionshare:main'
onionshare-cli = 'onionshare_cli:main'
