[tool.poetry]
name = "onionshare-docs"
version = "0.1.0"
description = ""
authors = ["Micah Lee <micah@micahflee.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sphinx = "*"
sphinx-rtd-theme = "*"
sphinx-intl = "*"
httpx = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
